# ttop

./: .prettierignore  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data.rs  main.rs
src-tauri/src/proc/: mod.rs  stat.rs
src-tauri/src/sys/: mod.rs  stat.rs
src/components/: Cpu.tsx
src/lib/bindings/: CpuStat.ts  Proc.ts  SingleCpu.ts  Sium.ts
